# rmvl

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
autoaim/: CMakeLists.txt
autoaim/combo/: CMakeLists.txt
autoaim/combo/param/: rune.para
autoaim/combo/src/: combo.cpp
autoaim/combo/test/: armor_test.cpp  rune_test.cpp  top_armor_test.cpp
autoaim/decider/param/: outpost_decider.para  rune_decider.para
autoaim/detector/: CMakeLists.txt
autoaim/detector/param/: gyro_detector.para
autoaim/detector/test/: armor_detector_test.cpp  armor_match_test.cpp  rune_detector_test.cpp
autoaim/feature/: CMakeLists.txt
autoaim/feature/param/: light_blob.para  rune_target.para
autoaim/feature/test/: h_light_blob_test.cpp  rune_center_test.cpp
autoaim/group/param/: gyro_group.para
autoaim/predictor/: CMakeLists.txt
autoaim/predictor/param/: armor_predictor.para  rune_predictor.para  spi_rune_predictor.para
autoaim/predictor/test/: test_spi_rune_predictor.cpp
autoaim/tracker/: CMakeLists.txt
autoaim/tracker/param/: armor_tracker.para  rune_tracker.para
autoaim/tracker/src/: default_tracker.cpp
autoaim/tracker/test/: armor_tracker_test.cpp
autoaim/types/: CMakeLists.txt
doc/: CMakeLists.txt  Doxyfile.in  doxygen-awesome-darkmode-toggle.js  doxygen-awesome-fragment-copy-button.js  doxygen-awesome-github-link.js  doxygen-awesome-interactive-toc.js  doxygen-awesome-paragraph-link.js  doxygen-awesome.css  footer.html  header.html  intro.markdown  rmvl.bib  root.markdown.in  tutorial-utils.js
doc/devconfig/vscode/: extensions.json
doc/py_tutorials/: py_tutorials.markdown
doc/py_tutorials/py_bindings/: py_bindings.md  readme.md
doc/py_tutorials/py_modules/: py_algorithm.md  py_core.md  py_modules.md  py_opcua.md  readme.md
doc/tools/: add_signatures.py  doxygen_scan.py  gen.py  html_functions.py  pyrmvl_cst.cfg  pyrmvl_fns.cfg  scan_tutorials.py
doc/tutorials/: tutorials.markdown
doc/tutorials/autoaim/: tutorial_modules.markdown
doc/tutorials/common/: tutorial_common.markdown
doc/tutorials/extra/: tutorial_extra.markdown  tutorial_modules.markdown
doc/tutorials/introduction/: basic_introduction.md  configuration_options.md  install_overview.md  table_of_content_introduction.md  tutorial_install_overview.markdown  tutorial_table_of_content_introduction.markdown
doc/tutorials/modules/: tutorial_modules.md  tutorial_rmvlmsg.md  tutorial_rmvlpara.md
doc/tutorials/rdt/: rdt_lpss.md  rdt_rdt.md  rdt_rmvl.md  usage.md
extra/: CMakeLists.txt
extra/combo/: CMakeLists.txt
extra/combo/param/: armor.para  rune.para
extra/combo/src/: combo.cpp
extra/combo/test/: armor_test.cpp  rune_test.cpp
extra/compensator/: CMakeLists.txt
extra/compensator/param/: gravity_compensator.para  gyro_compensator.para
extra/compensator/src/: compensator.cpp
extra/compensator/test/: test_gravity.cpp
extra/decider/: CMakeLists.txt
extra/decider/param/: gyro_decider.para  translation_decider.para
extra/detector/: CMakeLists.txt
extra/detector/param/: armor_detector.para  gyro_detector.para  rune_detector.para  tag_detector.para
extra/detector/test/: armor_detector_test.cpp  armor_detector_test.h  armor_match_test.cpp  rune_detector_test.cpp
extra/feature/: CMakeLists.txt
extra/feature/param/: anchor.para  pilot.para  rune_center.para
extra/feature/test/: anchor_test.cpp  light_blob_test.cpp  pilot_test.cpp  rune_center_test.cpp  rune_target_test.cpp
extra/group/: CMakeLists.txt
extra/group/param/: gyro_group.para  rune_group.para
extra/group/src/: default_group.cpp
extra/group/test/: test_gyro_group.cpp
extra/predictor/: CMakeLists.txt
extra/predictor/param/: gyro_predictor.para
extra/predictor/test/: test_spi_rune_predictor.cpp
extra/tracker/: CMakeLists.txt
extra/tracker/param/: gyro_tracker.para  planar_tracker.para  rune_tracker.para
extra/tracker/src/: default_tracker.cpp
extra/tracker/test/: gyro_tracker_test.cpp  planar_tracker_test.cpp
extra/types/: CMakeLists.txt
extra/types/misc/: python.json
extra/types/perf/: perf_types.cpp
extra/types/src/: type_to_string.cpp  types.cpp
extra/types/test/: test_types.cpp
modules/: CMakeLists.txt
modules/algorithm/: CMakeLists.txt
modules/algorithm/param/: algorithm.para
modules/algorithm/perf/: perf_kalman.cpp  perf_optimal.cpp  perf_pretreat.cpp
modules/algorithm/src/: dsp.cpp  mathmodel.cpp  mathmodel_impl.hpp  numcal.cpp  optimal.cpp  pretreat.cpp  transform.cpp
modules/algorithm/test/: test_datastruct.cpp  test_dsp.cpp  test_ew_topsis.cpp  test_kalman.cpp  test_km.cpp  test_math.cpp  test_mathmodel.cpp  test_numcal.cpp  test_optimal.cpp  test_pretreat.cpp  test_ra_heap.cpp  test_union_find.cpp
modules/camera/: CMakeLists.txt
modules/camera/param/: camera.para  galaxy_camera.para  hik_camera.para  mv_camera.para  opt_camera.para
modules/core/: CMakeLists.txt
modules/core/misc/: python.json
modules/core/param/: core.para
modules/core/perf/: perf_kalman.cpp  perf_optimal.cpp  perf_pretreat.cpp
modules/core/src/: core.cpp  dataio.cpp  io.cpp  io_impl.hpp  numcal.cpp  optimal.cpp  pretreat.cpp  serial.cpp  timer.cpp  transform.cpp
modules/core/test/: test_dataio.cpp  test_ew_topsis.cpp  test_io.cpp  test_kalman.cpp  test_numcal.cpp  test_optimal.cpp  test_pretreat.cpp  test_ra_heap.cpp  test_timer.cpp  test_union_find.cpp
modules/imgproc/: CMakeLists.txt
modules/imgproc/perf/: perf_pretreat.cpp
modules/imgproc/src/: pretreat.cpp
modules/imgproc/test/: test_paint.cpp  test_pretreat.cpp
modules/io/: CMakeLists.txt
modules/light/: CMakeLists.txt
modules/lpss/: CMakeLists.txt
modules/ml/: CMakeLists.txt
modules/opcua/: CMakeLists.txt
modules/para/: CMakeLists.txt
modules/rmath/: CMakeLists.txt
samples/: CMakeLists.txt
samples/detector/: CMakeLists.txt
samples/io/: CMakeLists.txt  http_server.cpp
samples/light/: CMakeLists.txt  hik_light.cpp
samples/opcua/: CMakeLists.txt  opcua_client.cpp  opcua_server.cpp
samples/version/: CMakeLists.txt  sample_version.cpp
(+564 files in other folders)
