execute_process(COMMAND ls ${CMAKE_CURRENT_SOURCE_DIR} OUTPUT_VARIABLE sample_st)
string(REPLACE "\n" ";" sample_st "${sample_st}")
foreach(m ${sample_st})
    if(IS_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/${m})
        if(NOT "${m}" STREQUAL "tutorial_code")
            add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/${m})
        endif()
    endif()
endforeach()
